--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <style>
     main {
         position: relative;
-        top: 150px;
+        padding-top: 150px;
         justify-content: center;
         display: grid;
         grid-template-columns: 136px 136px 136px 136px;
@@ -14,7 +14,7 @@
         
     }
     .googleLogo {
-        grid-area: logo;
+            grid-area: logo;
     }
     .searchBar {
         grid-area: search;
@@ -25,35 +25,44 @@
     }
     .searchBar input {
         width: 585px;
-        height: 30px;
+        height: 45px;
         border-radius: 24px;
-        border-color:gray;
-        border-width: 2px 2px;
+        border-color: #DFE1E5;
+        border-style: solid;
+        text-indent: 30px;
     }
+    /* will attack this next
+    .searchBar input:hover {
+        box-shadow: 
+    }
+    */
     .button1 {
         grid-area: button1;
-        justify-self: left;
+        justify-self: right;
+        padding-right: 5px;
     }
     .button1:hover {
-        box-shadow:slategray
+        box-shadow:0px 0px 10px slategray;
     }
     .button2 {
         grid-area: button2;
-        justify-self: right;
+        justify-self: left;
+        padding-left: 5px;
     }
 </style>
 <head>
     <title>Google</title>
+    <link rel="shortcut icon" type="image/x-icon" href="google.png" />
 </head>
 <body>
-    <main>.
+    <main>
         <div class="googleLogo">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
         </div>
         <div class="searchBar">
-            <input type="text" width="544">
+            <input type="text" id="textBar">
         </div>
-        <div class="button1">
+        <div class="button1" hover>
             <button>Google Search</button>
         </div>
         <div class="button2">
